Fixed the overlap issue on small screen devices

--- a/css/main.css
+++ b/css/main.css
@@ -2163,10 +2163,10 @@ body.mobile-nav-active #mobile-nav-toggle {
       .banner-content h1 {
         font-size: 40px;
         line-height: 40px; } }
-    @media (max-width: 380px) {
+    @media (max-width: 335px) {
       .banner-content h1 {
-        font-size: 40px;
-        line-height: 40px; } }
+        font-size: 35px;
+        line-height: 35px; } }
   .banner-content .me {
     background: #124E78;
     padding: 18px;
